--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,10 @@
     "@types/pg": "^8.15.4",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
+    "esbuild": "^0.25.8",
     "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "esbuild": "^0.25.8"
   }
 }
